--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ body, .app {
 
 .bookshelf-title {
   border-bottom: 1px solid #dedede;
+  text-transform: capitalize;
 }
 
 .bookshelf-books {
@@ -53,7 +54,7 @@ body, .app {
   bottom: 25px;
 }
 
-.open-search button {
+.open-search a {
   display: block;
   width: 50px;
   height: 50px;
@@ -68,7 +69,7 @@ body, .app {
   outline: 0;
 }
 
-.open-search button:hover {
+.open-search a:hover {
   background-color: rgb(0, 102, 0);
 }
 
